[project]
name = "rag-faq"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.34.0",
    "fastapi==0.115.14",
    "mangum==0.19.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pinecone-client==3.2.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.20",
    "pyyaml>=6.0.3",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "streamlit>=1.9.0",
    "tiktoken>=0.7.0",
    "uvicorn==0.35.0",
]
